edition = "2023";

package yuhaiin.api.tools;

option go_package = "github.com/Asutorufa/yuhaiin/pkg/protos/api";
option features.(pb.go).api_level = API_OPAQUE;

import "google/protobuf/empty.proto";
import "google/protobuf/go_features.proto";
import "tools/tools.proto";

service tools {
  rpc get_interface(google.protobuf.Empty) returns (yuhaiin.tools.Interfaces);
  rpc licenses(google.protobuf.Empty) returns (yuhaiin.tools.Licenses);
  rpc log(google.protobuf.Empty) returns (stream yuhaiin.tools.Log);
  rpc logv2(google.protobuf.Empty) returns (stream yuhaiin.tools.Logv2);
}
