edition = "2023";

package yuhaiin.tools;

option go_package = "github.com/Asutorufa/yuhaiin/pkg/protos/tools";
option features.(pb.go).api_level = API_OPAQUE;

import "google/protobuf/go_features.proto";

message Interfaces {
  repeated Interface interfaces = 1 [ json_name = "interfaces" ];
}

message Interface {
  string name = 1 [ json_name = "name" ];
  repeated string addresses = 2 [ json_name = "addresses" ];
}

message Licenses {
  repeated License yuhaiin = 1 [ json_name = "yuhaiin" ];
  repeated License android = 2 [ json_name = "android" ];
}

message License {
  string name = 1 [ json_name = "name" ];
  string url = 2 [ json_name = "url" ];
  string license = 3 [ json_name = "license" ];
  string license_url = 4 [ json_name = "license_url" ];
}

message Log { string log = 1 [ json_name = "log" ]; }

message Logv2 { repeated string log = 1 [ json_name = "log" ]; }